# search-service

./: .gitignore  LICENSE  README.md
.github/ISSUE_TEMPLATE/: feature_request.md
fastapi/intent-recognition-api/: README.md
fastapi/intent-recognition-api/app/models/: intent.py
fastapi/intent-recognition-api/app/routers/: intent.py  query.py  router.py
fastapi/intent-recognition-api/app/services/: intent_classifier.py  (+2 more)
fastapi/intent-recognition-api/tests/: test_intent.py
llm/: LangChain_004_VectorStore_Retrieval.ipynb  pyproject.toml
llm/chroma_db/: chroma.sqlite3
recommendation/: .gitignore  README.md  go.mod  go.sum  main.go
recommendation/api/: router.go
recommendation/api/v1/: poi.go
recommendation/app/: app.go
recommendation/cmd/: serve.go
recommendation/configs/: config.yaml
recommendation/domain/: response.go
recommendation/dto/: poiDto.go
recommendation/elasticsearch/: docker-compose.yml
recommendation/fastapi/intent-recognition-api/: requirements.txt
recommendation/infrastructure/: ModelServerCaller.go  dto.go  infratructrue.go
recommendation/internal/elasticsearch-client/: PoiDto.go  elasticsearchClient.go  latlonConverter.go
recommendation/internal/redis-client/: RedisClient.go
recommendation/internal/service/: poiSaveService.go
recommendation/logger/: logger.go  loggerHooker.go
recommendation/repository/: RecommendationRepository.go  poiRepository.go
recommendation/server/: server.go
recommendation/service/: Poi.go  searchService.go
recommendation/setting/: setting.go
recommendation/signals/: shutdown.go
(+9 files in other folders)
